--- a/roles/pnpm/tasks/main.yml
+++ b/roles/pnpm/tasks/main.yml
@@ -1,23 +1,18 @@
-- name: Remove old binary
-  become_user: "{{ username }}"
-  file:
-    path: "$PNPM_HOME"
-    state: absent
+- name: Install nodejs
+  include_role:
+    name: asdf
+  vars:
+    asdf_skip_update: True
+    asdf_plugins:
+      - name: "nodejs"
+        repository: "https://github.com/asdf-vm/asdf-nodejs.git"
+        versions:
+          - "latest"
+        global: "latest"
 
-- name: Create folders
+- name: Install/Update pnpm
   become_user: "{{ username }}"
-  file:
-    path: "$PNPM_HOME"
-    state: directory
-    recurse: yes
-
-- name: Download Installer
-  get_url:
-    url: https://get.pnpm.io/install.sh
-    owner: "{{ username }}"
-    mode: "u+rx"
-    dest: /tmp/pnpm.sh
-
-- name: Run Installer
-  become_user: "{{ username }}"
-  command: /tmp/pnpm.sh
+  community.general.npm:
+    name: pnpm
+    state: latest
+    global: true
