--- a/roles/rust/tasks/main.yml
+++ b/roles/rust/tasks/main.yml
@@ -1,43 +1,11 @@
-- name: check if cargo is installed
-  command: cargo --version
-  register: cargo_exists
-  become_user: "{{ username }}"
-  ignore_errors: yes
-
-- name: Install Rust
-  when: cargo_exists is failed
-  block:
-    - name: Remove old binary
-      become_user: "{{ username }}"
-      file:
-        path: "{{ item }}"
-        state: absent
-      with_items:
-        - "$RUSTUP_HOME"
-        - "$CARGO_HOME"
-
-    - name: Create folders
-      become_user: "{{ username }}"
-      file:
-        path: "{{ item }}"
-        state: directory
-        recurse: yes
-      with_items:
-        - "$RUSTUP_HOME"
-        - "$CARGO_HOME"
-
-    - name: Download Installer
-      get_url:
-        url: https://sh.rustup.rs
-        owner: "{{ username }}"
-        mode: "u+rx"
-        dest: /tmp/rustup.sh
-
-    - name: Run Installer
-      become_user: "{{ username }}"
-      command: /tmp/rustup.sh --no-modify-path -y
-
-- name: Update Rust
-  when: cargo_exists is successful
-  become_user: "{{ username }}"
-  command: rustup update stable
+- name: Install rust
+  include_role:
+    name: asdf
+  vars:
+    asdf_skip_update: True
+    asdf_plugins:
+      - name: "rust"
+        repository: "https://github.com/asdf-community/asdf-rust.git"
+        versions:
+          - "latest"
+        global: "latest"
