--- a/roles/xfce/tasks/main.yml
+++ b/roles/xfce/tasks/main.yml
@@ -2,15 +2,7 @@
   package:
     name:
       - xfce4 # This installs core modules and applications
-      - xfce4-battery-plugin
-      - xfce4-datetime-plugin
-      # - xfce4-docklike-plugin
-      - xfce4-places-plugin
-      - xfce4-pulseaudio-plugin
-      - xfce4-sensors-plugin
-      - xfce4-time-out-plugin
-      - xfce4-whiskermenu-plugin
-      - xfce4-xkb-plugin
+      - xfce4-power-manager
     state: present
 
 - name: Create directories
