--- a/roles/homeassistant/tasks/homeassistant.yml
+++ b/roles/homeassistant/tasks/homeassistant.yml
@@ -18,11 +18,15 @@
     owner: "root"
     group: "root"
 
-- name: Install hacs
-  shell: wget -O - https://get.hacs.xyz | bash -
-  args:
-    chdir: "{{ docker_dir }}/{{ container_name }}/"
-    executable: /bin/bash
+- name: Create empty files
+  file:
+    path: "{{ item }}"
+    state: touch
+  with_items:
+      - "{{ docker_dir }}/{{ container_name }}/automations.yaml"
+      - "{{ docker_dir }}/{{ container_name }}/counter.yaml"
+      - "{{ docker_dir }}/{{ container_name }}/scenes.yaml"
+      - "{{ docker_dir }}/{{ container_name }}/scripts.yaml"
 
 - name: Make sure the {{ container_name }} container is created and running
   community.docker.docker_container:
@@ -49,3 +53,15 @@
     minute: "0"
     hour: "5"
     job: "docker start {{ container_name }}"
+
+- name: Install hacs
+  shell: wget -O - https://get.hacs.xyz | bash -
+  args:
+    chdir: "{{ docker_dir }}/{{ container_name }}/"
+    executable: /bin/bash
+
+- name: Restart {{ container_name }} container
+  community.docker.docker_container:
+    name: "{{ container_name }}"
+    state: "started"
+    restart: true
