--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -25,7 +25,6 @@
       - "{{ docker_dir }}/{{ container_name }}:/bitnami/postgresql"
     networks:
       - name: docker_network
-    purge_networks: yes
     restart_policy: always
     user: "root:root"
 
@@ -33,6 +32,15 @@
   pip:
     name: psycopg2-binary
 
+- name: Wait for postgres to be ready
+  community.postgresql.postgresql_ping:
+    login_host: "0.0.0.0"
+    login_user: "{{ postgres_user }}"
+    login_password: "{{ postgres_password }}"
+  register: result
+  until: result.is_available == true
+  retries: 5
+  delay: 10
 - name: Create databases
   community.postgresql.postgresql_db:
     name: "{{ item }}"
