--- a/roles/homeassistant/files/viseu/homeassistant/configuration.yaml
+++ b/roles/homeassistant/files/viseu/homeassistant/configuration.yaml
@@ -19,6 +19,8 @@ http:
     - 127.0.0.1
     - 192.168.1.0/24 # Host network
     - 172.20.0.0/24 # Docker network ipam_config
+allowlist_external_dirs:
+  - "/config/integrations" # Integration output files
 
 recorder:
   db_url: postgresql://postgres:postgres@0.0.0.0:5432/homeassistant
