--- a/roles/coolify/tasks/main.yml
+++ b/roles/coolify/tasks/main.yml
@@ -14,3 +14,10 @@
     minute: "40"
     hour: "4"
     job: "docker stop $(docker container ls -q -f 'name=coolify*')"
+
+- name: Start coolify containers every day at 5:00 AM
+  cron:
+    name: "Start coolify containers every day at 5:00 AM"
+    minute: "0"
+    hour: "5"
+    job: "docker start $(docker ps -q -f 'status=exited')"
