--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -4,8 +4,7 @@
     expires: -1
     groups: sudo
     name: "{{ username }}"
-    # https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_filters.html#id36
-    password: "{{ user_password | string | password_hash('sha512', 65534 | random(seed=inventory_hostname) | string, rounds=5002) }}"
+    password: "{{ user_hashed_password }}"
     shell: /bin/bash
     uid: "{{ uid }}"
 
