feat: Move from nginx proxy manager to traefik

--- a/lisbon.yml
+++ b/lisbon.yml
@@ -17,7 +17,7 @@
     - role: docker
     - role: security
     - role: cloudflare
-    - role: nginx
+    - role: traefik
     - role: wireguard
     - role: postgres
     - role: vaultwarden
