--- a/roles/vaultwarden/tasks/vaultwarden.yml
+++ b/roles/vaultwarden/tasks/vaultwarden.yml
@@ -36,6 +36,19 @@
     networks:
       - name: docker_network
     restart_policy: always
+    labels:
+      "traefik.enable": "true"
+      "traefik.http.services.vaultwarden.loadbalancer.server.port": "80"
+
+      "traefik.http.routers.vaultwarden-https.rule": "Host(`{{ domains.vaultwarden.domain }}`)"
+      "traefik.http.routers.vaultwarden-https.entrypoints": "websecure"
+      "traefik.http.routers.vaultwarden-https.tls": "true"
+      "traefik.http.routers.vaultwarden-https.tls.certresolver": "cloudflare"
+
+      "traefik.http.routers.vaultwarden-admin.rule": "Host(`{{ domains.vaultwarden.domain }}`) && PathPrefix(`/admin`)"
+      "traefik.http.routers.vaultwarden-admin.entrypoints": "websecure"
+      "traefik.http.routers.vaultwarden-admin.tls": "true"
+      "traefik.http.routers.vaultwarden-admin.middlewares": "basic-auth"
 
 - name: Start {{ container_name }} at 5:00 AM
   cron:
