--- a/host_vars/coolify.yml
+++ b/host_vars/coolify.yml
@@ -24,6 +24,7 @@ user_hashed_password: "{{ user_password | string | password_hash('bcrypt', salt=
 
 base_hostname: "brenosalles.com"
 
+system_cleanup_crons: yes
 system_set_hostname: yes
 system_reboot: yes
 
