--- a/roles/asdf/vars/asdf.yml
+++ b/roles/asdf/vars/asdf.yml
@@ -1,4 +1,4 @@
 environment_variables:
-  ASDF_DIR: "/home/{{ username }}/Documents/asdf-vm/asdf"
+  ASDF_DIR: "/home/{{ username }}/.local/share/asdf"
   ASDF_DATA_DIR: "/home/{{ username }}/.local/share/asdf"
-  ASDF_CONFIG_FILE: "/home/{{ username }}/.config/asdf/.asdfrc"
+  ASDF_CONFIG_FILE: "/home/{{ username }}/.local/share/asdf/.asdfrc"
