--- a/roles/homeassistant/tasks/zigbee2mqtt.yml
+++ b/roles/homeassistant/tasks/zigbee2mqtt.yml
@@ -18,6 +18,11 @@
     owner: "root"
     group: "root"
 
+# Firmware update
+# install as sudo https://github.com/NabuCasa/universal-silabs-flasher
+# download https://github.com/darkxst/silabs-firmware-builder/tree/main/firmware_builds/zbdonglee at 115200 baud rate
+# sudo universal-silabs-flasher --device /dev/ttyACM0 --bootloader-reset sonoff flash --firmware file.gbl
+
 - name: Make sure the {{ container_name }} container is created and running
   community.docker.docker_container:
     name: "{{ container_name }}"
