feat: Rename docker_network to reverse_proxy

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -22,9 +22,9 @@
           "experimental": true,
           "userland-proxy": false
         }
-    - name: Configure network
+    - name: Configure reverse_proxy network
       community.docker.docker_network:
-        name: docker_network
+        name: reverse_proxy
         state: present
         force: yes
         enable_ipv6: yes
