--- a/roles/freshrss/tasks/main.yml
+++ b/roles/freshrss/tasks/main.yml
@@ -61,7 +61,7 @@
       - "{{ docker_dir }}/{{ container_name }}/data:/var/www/FreshRSS/data"
       - "{{ docker_dir }}/{{ container_name }}/extensions:/var/www/FreshRSS/extensions"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
     labels:
       "traefik.enable": "true"
