--- a/roles/homeassistant/tasks/zigbee2mqtt.yml
+++ b/roles/homeassistant/tasks/zigbee2mqtt.yml
@@ -38,7 +38,7 @@
     devices:
       - "/dev/serial/by-id/{{ zigbee_coordinator_id }}:/dev/ttyACM0"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
     labels:
       "traefik.enable": "true"
