--- a/roles/paperless/tasks/backup.yml
+++ b/roles/paperless/tasks/backup.yml
@@ -36,7 +36,7 @@
       - "{{ docker_dir }}/{{ container_name }}/rclone:/.config/rclone"
       - "{{ docker_dir }}/{{ container_name }}/media:/media"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: "on-failure"
     command: "paperless"
 
