--- a/roles/paperless/tasks/gotenberg.yml
+++ b/roles/paperless/tasks/gotenberg.yml
@@ -10,7 +10,7 @@
     env:
       "TZ": "{{ timezone }}"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
     command: "gotenberg --chromium-disable-javascript=true --chromium-allow-list=file:///tmp/.*"
 
