--- a/roles/paperless/tasks/paperless.yml
+++ b/roles/paperless/tasks/paperless.yml
@@ -48,7 +48,7 @@
       - "{{ docker_dir }}/{{ container_name }}/media:/usr/src/paperless/media"
       - "{{ docker_dir }}/{{ container_name }}/data:/usr/src/paperless/data"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
     labels:
       "traefik.enable": "true"
