--- a/roles/paperless/tasks/redis.yml
+++ b/roles/paperless/tasks/redis.yml
@@ -22,7 +22,7 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
 
 - name: Start {{ container_name }} at 5:00 AM
