--- a/roles/paperless/tasks/tika.yml
+++ b/roles/paperless/tasks/tika.yml
@@ -10,7 +10,7 @@
     env:
       "TZ": "{{ timezone }}"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
 
 - name: Start {{ container_name }} at 5:00 AM
