--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -24,7 +24,7 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/bitnami/postgresql"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
     user: "root:root"
 
