--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -35,7 +35,7 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}:/etc/wireguard"
     networks:
-      - name: docker_network
+      - name: reverse_proxy
     restart_policy: always
     labels:
       "traefik.enable": "true"
