--- a/roles/homeassistant/tasks/zigbee2mqtt.yml
+++ b/roles/homeassistant/tasks/zigbee2mqtt.yml
@@ -39,9 +39,13 @@
       - "/dev/serial/by-id/{{ zigbee_coordinator_id }}:/dev/ttyACM0"
     networks:
       - name: reverse_proxy
+      - name: homeassistant_network
+    comparisons:
+      networks: strict
     restart_policy: always
     labels:
       "traefik.enable": "true"
+      "traefik.docker.network": "reverse_proxy"
       "traefik.http.services.zigbee2mqtt.loadbalancer.server.port": "8080"
 
       "traefik.http.routers.zigbee2mqtt.rule": "Host(`{{ domains.zigbee2mqtt.domain }}`)"
