--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -36,9 +36,12 @@
       - "{{ docker_dir }}/{{ container_name }}:/etc/wireguard"
     networks:
       - name: reverse_proxy
+    comparisons:
+      networks: strict
     restart_policy: always
     labels:
       "traefik.enable": "true"
+      "traefik.docker.network": "reverse_proxy"
       "traefik.http.services.wireguard.loadbalancer.server.port": "51821"
 
       "traefik.http.routers.wireguard.rule": "Host(`{{ domains.wireguard.domain }}`)"
