--- a/roles/homeassistant/tasks/signal-messenger.yml
+++ b/roles/homeassistant/tasks/signal-messenger.yml
@@ -23,7 +23,9 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/signal-cli-config:/home/.local/share/signal-cli"
     networks:
-      - name: reverse_proxy
+      - name: homeassistant_network
+    comparisons:
+      networks: strict
     restart_policy: always
 
 - name: Start {{ container_name }} at 5:00 AM
