--- a/roles/paperless/tasks/backup.yml
+++ b/roles/paperless/tasks/backup.yml
@@ -36,7 +36,9 @@
       - "{{ docker_dir }}/{{ container_name }}/rclone:/.config/rclone"
       - "{{ docker_dir }}/{{ container_name }}/media:/media"
     networks:
-      - name: reverse_proxy
+      - name: postgres_network
+    comparisons:
+      networks: strict
     restart_policy: "on-failure"
     command: "paperless"
 
