--- a/roles/paperless/tasks/redis.yml
+++ b/roles/paperless/tasks/redis.yml
@@ -22,7 +22,9 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
     networks:
-      - name: reverse_proxy
+      - name: paperless_network
+    comparisons:
+      networks: strict
     restart_policy: always
 
 - name: Start {{ container_name }} at 5:00 AM
