--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -37,15 +37,18 @@
       - "--certificatesresolvers.cloudflare.acme.email=breno-salles@hotmail.com"
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
       - "--certificatesresolvers.cloudflare.acme.storage=/letsencrypt/acme.json"
+      - "--log.level=DEBUG"
+      - "--providers.docker.network=reverse_proxy"
     networks:
       - name: reverse_proxy
     comparisons:
-          networks: strict
+      networks: strict
     etc_hosts:
       "host.docker.internal": "host-gateway"
     restart_policy: always
     labels:
       "traefik.enable": "true"
+      "traefik.docker.network": "reverse_proxy"
       "traefik.http.services.traefik.loadbalancer.server.port": "8080"
 
       "traefik.http.routers.traefik.rule": "Host(`{{ domains.base.domain }}`)"
