--- a/roles/vaultwarden/tasks/vaultwarden.yml
+++ b/roles/vaultwarden/tasks/vaultwarden.yml
@@ -35,9 +35,13 @@
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
     networks:
       - name: reverse_proxy
+      - name: postgres_network
+    comparisons:
+      networks: strict
     restart_policy: always
     labels:
       "traefik.enable": "true"
+      "traefik.docker.network": "reverse_proxy"
       "traefik.http.services.vaultwarden.loadbalancer.server.port": "80"
 
       "traefik.http.routers.vaultwarden-https.rule": "Host(`{{ domains.vaultwarden.domain }}`)"
