--- a/roles/paperless/tasks/paperless.yml
+++ b/roles/paperless/tasks/paperless.yml
@@ -48,7 +48,7 @@
       - "{{ docker_dir }}/{{ container_name }}/media:/usr/src/paperless/media"
       - "{{ docker_dir }}/{{ container_name }}/data:/usr/src/paperless/data"
     networks:
-      - name: reverse_proxy
+      - name: proxy_network
       - name: postgres_network
       - name: paperless_network
     comparisons:
@@ -56,7 +56,7 @@
     restart_policy: always
     labels:
       "traefik.enable": "true"
-      "traefik.docker.network": "reverse_proxy"
+      "traefik.docker.network": "proxy_network"
       "traefik.http.services.paperless.loadbalancer.server.port": "8000"
 
       "traefik.http.routers.paperless.rule": "Host(`{{ domains.paperless.domain }}`)"
