--- a/roles/freshrss/tasks/main.yml
+++ b/roles/freshrss/tasks/main.yml
@@ -61,14 +61,14 @@
       - "{{ docker_dir }}/{{ container_name }}/data:/var/www/FreshRSS/data"
       - "{{ docker_dir }}/{{ container_name }}/extensions:/var/www/FreshRSS/extensions"
     networks:
-      - name: reverse_proxy
+      - name: proxy_network
       - name: postgres_network
     comparisons:
       networks: strict
     restart_policy: always
     labels:
       "traefik.enable": "true"
-      "traefik.docker.network": "reverse_proxy"
+      "traefik.docker.network": "proxy_network"
       "traefik.http.services.freshrss.loadbalancer.server.port": "8080"
 
       "traefik.http.routers.freshrss.rule": "Host(`{{ domains.freshrss.domain }}`)"
