--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -38,9 +38,9 @@
       - "--certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare"
       - "--certificatesresolvers.cloudflare.acme.storage=/letsencrypt/acme.json"
       - "--log.level=DEBUG"
-      - "--providers.docker.network=reverse_proxy"
+      - "--providers.docker.network=proxy_network"
     networks:
-      - name: reverse_proxy
+      - name: proxy_network
     comparisons:
       networks: strict
     etc_hosts:
@@ -48,7 +48,7 @@
     restart_policy: always
     labels:
       "traefik.enable": "true"
-      "traefik.docker.network": "reverse_proxy"
+      "traefik.docker.network": "proxy_network"
       "traefik.http.services.traefik.loadbalancer.server.port": "8080"
 
       "traefik.http.routers.traefik.rule": "Host(`{{ domains.base.domain }}`)"
