--- a/roles/vaultwarden/tasks/vaultwarden.yml
+++ b/roles/vaultwarden/tasks/vaultwarden.yml
@@ -34,14 +34,14 @@
     volumes:
       - "{{ docker_dir }}/{{ container_name }}/data:/data"
     networks:
-      - name: reverse_proxy
+      - name: proxy_network
       - name: postgres_network
     comparisons:
       networks: strict
     restart_policy: always
     labels:
       "traefik.enable": "true"
-      "traefik.docker.network": "reverse_proxy"
+      "traefik.docker.network": "proxy_network"
       "traefik.http.services.vaultwarden.loadbalancer.server.port": "80"
 
       "traefik.http.routers.vaultwarden-https.rule": "Host(`{{ domains.vaultwarden.domain }}`)"
