--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,3 +1,15 @@
+- name: Stop all containers safely
+  block:
+    - name: Get a list of all running containers
+      docker_host_info:
+        containers: true
+      register: docker_info
+    - name: Stop all running containers
+      docker_container:
+        name: '{{ item.Names[0] | regex_replace("^/", "") }}'
+        state: stopped
+      loop: "{{ docker_info.containers }}"
+
 - name: Prune everything (including non-dangling images)
   community.docker.docker_prune:
     containers: true
